--- a/index.html
+++ b/index.html
@@ -18,5 +18,138 @@
         />
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="container-home">
+            <ul class="list-home">
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-1.html"
+                        >Project 1</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-2.html"
+                        >Project 2</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-3.html"
+                        >Project 3</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-4.html"
+                        >Project 4</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-5.html"
+                        >Project 5</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-6.html"
+                        >Project 6</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-7.html"
+                        >Project 7</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-8.html"
+                        >Project 8</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-9.html"
+                        >Project 9</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-10.html"
+                        >Project 10</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-11.html"
+                        >Project 11</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-12.html"
+                        >Project 12</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-13.html"
+                        >Project 13</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-14.html"
+                        >Project 14</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-15.html"
+                        >Project 15</a
+                    >
+                </li>
+                <li class="item-home">
+                    <a
+                        class="link-dif-site"
+                        style="--bgi: ./img/places/2.jpg"
+                        href="./project-16.html"
+                        >Project 16</a
+                    >
+                </li>
+            </ul>
+        </div>
+    </body>
 </html>
