--- a/project-1.html
+++ b/project-1.html
@@ -22,6 +22,7 @@
     </head>
 
     <body>
+        <!-- ! Project 1 - Digital Clock -->
         <a href="./index.html" class="back-to-home">Go Home</a>
         <div class="container">
             <h2>Digital Clock</h2>
