--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         class="link-dif-site"
                         style="--bgi: ./img/places/2.jpg"
                         href="./project-3.html"
-                        >Project 3</a
+                        >Project 3 (cancel)</a
                     >
                 </li>
                 <li class="item-home">
