--- a/project-3.html
+++ b/project-3.html
@@ -23,5 +23,6 @@
 
     <body>
         <!-- ! Project 3 - Button Ripple Effect -->
+        <a href="./index.html" class="back-to-home">Go Home</a>
     </body>
 </html>
