--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         class="link-dif-site"
                         style="--bgi: ./img/places/2.jpg"
                         href="./project-7.html"
-                        >Project 7</a
+                        >Project 7 (cancel)</a
                     >
                 </li>
                 <li class="item-home">
