--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         class="link-dif-site"
                         style="--bgi: ./img/places/2.jpg"
                         href="./project-9.html"
-                        >Project 9</a
+                        >Project 9(cancel)</a
                     >
                 </li>
                 <li class="item-home">
