--- a/project-1.html
+++ b/project-1.html
@@ -43,6 +43,19 @@
                     <span id="ampm">AM</span>
                 </div>
             </div>
+
+            <div class="clock-control">
+                <button type="button" id="btn-control-play" class="btn-control">
+                    <i class="fa-solid fa-play"></i>
+                </button>
+                <button
+                    type="button"
+                    id="btn-control-pause"
+                    class="btn-control"
+                >
+                    <i class="fa-solid fa-pause"></i>
+                </button>
+            </div>
         </div>
     </body>
 </html>
