--- a/project-10.html
+++ b/project-10.html
@@ -10,19 +10,187 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <title>Multiplication APP</title>
+        <title>Background Image Scroll Effect</title>
         <link
             rel="shortcut icon"
             href="./assets/img/favicon.png"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/project-3.css" />
-        <script src="./assets/script/project-3.js" async></script>
+        <link rel="stylesheet" href="./assets/css/project-10.css" />
+        <script src="./assets/script/project-10.js" async></script>
     </head>
 
     <body>
-        <!-- ! Project 3 - Button Ripple Effect -->
+        <!-- ! Project 10 - Background Image Scroll Effect -->
         <a href="./index.html" class="back-to-home">Go Home</a>
+        <div class="bg-image"></div>
+        <div class="container">
+            <h1>Welcome to our website</h1>
+            <br />
+            <br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                harum ratione laborum id placeat dignissimos quisquam? Excepturi
+                quisquam commodi nobis doloremque placeat libero eius repellat
+                natus. Inventore itaque facilis asperiores, beatae corporis
+                magni eos quos totam quisquam officiis! Odit, dolore atque sequi
+                modi velit voluptatum quos repellendus ab dicta iste?
+            </p>
+            <br /><br /><br />
+        </div>
     </body>
 </html>
