--- a/project-11.html
+++ b/project-11.html
@@ -10,19 +10,21 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <title>Multiplication APP</title>
+        <title>Drum Kits</title>
         <link
             rel="shortcut icon"
             href="./assets/img/favicon.png"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/project-3.css" />
-        <script src="./assets/script/project-3.js" async></script>
+        <link rel="stylesheet" href="./assets/css/project-11.css" />
+        <script src="./assets/script/project-11.js" async></script>
     </head>
 
     <body>
-        <!-- ! Project 3 - Button Ripple Effect -->
+        <!-- ! Project 11 - Drum Kits -->
         <a href="./index.html" class="back-to-home">Go Home</a>
+        <h1>Drum Kist <i class="fa-solid fa-drum"></i></h1>
+        <div class="container"></div>
     </body>
 </html>
