--- a/project-12.html
+++ b/project-12.html
@@ -10,19 +10,34 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <title>Multiplication APP</title>
+        <title>Random Photos</title>
         <link
             rel="shortcut icon"
             href="./assets/img/favicon.png"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/project-3.css" />
-        <script src="./assets/script/project-3.js" async></script>
+        <link rel="stylesheet" href="./assets/css/project-12.css" />
+        <script src="./assets/script/project-12.js" async></script>
+
+        <!-- ! Image random : https://picsum.photos/200/300 -->
     </head>
 
     <body>
-        <!-- ! Project 3 - Button Ripple Effect -->
+        <!-- !  Project 12 - Random Photos -->
         <a href="./index.html" class="back-to-home">Go Home</a>
+        <div class="image-container">
+            <img src="https://picsum.photos/200/300?random=1" />
+            <img src="https://picsum.photos/200/300?random=2" />
+            <img src="https://picsum.photos/200/300?random=3" />
+            <img src="https://picsum.photos/200/300?random=4" />
+            <img src="https://picsum.photos/200/300?random=5" />
+            <img src="https://picsum.photos/200/300?random=6" />
+            <img src="https://picsum.photos/200/300?random=7" />
+            <img src="https://picsum.photos/200/300?random=8" />
+            <img src="https://picsum.photos/200/300?random=9" />
+            <img src="https://picsum.photos/200/300?random=10" />
+        </div>
+        <button type="button" class="btn">Load More</button>
     </body>
 </html>
